<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/backgroud_linear_layout"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/img_dialog"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_check_circle" />

    <TextView
        android:id="@+id/txt_title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/sucesso" />


    <TextView
        android:id="@+id/txt_description_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/checkin_realizado" />


    <Button
        android:id="@+id/button_ok_dialog"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/ok"
        android:textAllCaps="false" />


</LinearLayout>