<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_events_error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/events_error"
            layout="@layout/events_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:padding="13dp"
            android:text="@string/recarregar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/events_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Surface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/evento"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/ic_baseline_clear_24" />

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/container_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <ImageView
                    android:id="@+id/img_event_detail"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/img_sem_foto" />

                <TextView
                    android:id="@+id/txt_name_checkin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/background_text_checkin"
                    android:padding="4dp"
                    android:text="@string/check_in"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/txt_title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/green"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_event_detail"
                    tools:text="Hacathon Social Woop Sicredi" />

                <ImageView
                    android:id="@+id/img_calendar_detail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_calendar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_title_detail" />

                <TextView
                    android:id="@+id/txt_date_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/img_calendar_detail"
                    app:layout_constraintStart_toEndOf="@id/img_calendar_detail"
                    app:layout_constraintTop_toTopOf="@id/img_calendar_detail"
                    tools:text="@string/date_detail" />

                <ImageView
                    android:id="@+id/img_money_detail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_attach_money_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_calendar_detail" />

                <TextView
                    android:id="@+id/txt_price_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    tools:text="@string/priceCheckin"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/img_money_detail"
                    app:layout_constraintStart_toEndOf="@id/img_money_detail"
                    app:layout_constraintTop_toTopOf="@id/img_money_detail" />

                <ImageView
                    android:id="@+id/img_local_detail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_location_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_money_detail" />

                <TextView
                    android:id="@+id/txt_local_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/img_local_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_local_detail"
                    app:layout_constraintTop_toTopOf="@id/img_local_detail"
                    tools:text="Av, porto alegre" />


                <View
                    android:id="@+id/view_detail"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/light_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/img_local_detail" />

                <TextView
                    android:id="@+id/txt_name_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:paddingTop="8dp"
                    android:text="@string/description_event"
                    android:textAllCaps="true"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_detail" />

                <TextView
                    android:id="@+id/txt_description_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="100dp"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_name_description"
                    tools:text="Descrição do evento" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/checkin_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_checkin"
            style="@style/Widget.MaterialComponents.BottomSheet.Modal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:behavior_peekHeight="72dp"
            app:cardBackgroundColor="#eee"
            app:cardCornerRadius="18dp"
            app:cardElevation="12dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <TextView
                    android:id="@+id/txt_checkin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:ellipsize="end"
                    android:paddingVertical="12dp"
                    android:text="@string/fazerCheckin"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_description_checkin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/fazer_chekin_com_dados_abaixo"
                    android:textColor="@color/gray"
                    android:textSize="17sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_checkin" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/checkin_layout_user"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_description_checkin"
                    app:startIconDrawable="@drawable/ic_user_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/checkin_layout_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:layout_constraintEnd_toEndOf="@id/checkin_layout_user"
                    app:layout_constraintStart_toStartOf="@id/checkin_layout_user"
                    app:layout_constraintTop_toBottomOf="@id/checkin_layout_user"
                    app:layout_constraintVertical_bias="0.0"
                    app:startIconDrawable="@drawable/ic_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/card_button_avancar"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:focusable="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintEnd_toEndOf="@id/checkin_layout_email"
                    app:layout_constraintStart_toStartOf="@id/checkin_layout_email"
                    app:layout_constraintTop_toBottomOf="@id/checkin_layout_email">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/backgroud_buttom">

                        <ProgressBar
                            android:id="@+id/progress_bar_checkin"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="10dp"
                            android:indeterminateTint="@color/white"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/button_avancar_checkin"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/button_avancar_checkin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/avancar"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>